--- a/client/views/partials/admin/customers/addUpdateCommissionAgent.html
+++ b/client/views/partials/admin/customers/addUpdateCommissionAgent.html
@@ -15,7 +15,7 @@
                         <div class="form-group styling-input-list">
                             <select class="form-control custom-form-control" ng-model="commissionAgent.leadType">
                                 <option ng-value="" selected>-- Select --</option>
-                                <option ng-repeat="type in leadType" ng-value="type.value">{{type.key}}</option>
+                                <option ng-repeat="type in leadType" ng-value="type.key">{{type.key}}</option>
                             </select>
                             <label class="focus-effect-for-input">Lead Type*</label>
                         </div>
