--- a/client/views/partials/admin/customers/truckOwners.html
+++ b/client/views/partials/admin/customers/truckOwners.html
@@ -41,7 +41,7 @@
                     {{owners.userName}}
                 </td>
                 <td data-title="'Customer Name'" sortable="'firstName'" class="clickable-item">
-                    {{owners.firstName}}
+                    {{owners.firstName || owners.contactName}}
                 </td>
                 <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item">
                     {{owners.contactPhone}}
