--- a/client/views/partials/admin/customers/addUpdateTransporter.html
+++ b/client/views/partials/admin/customers/addUpdateTransporter.html
@@ -15,13 +15,13 @@
                         <div class="form-group styling-input-list">
                             <select class="form-control custom-form-control" ng-model="transporter.leadType">
                                 <option ng-value="" selected>-- Select --</option>
-                                <option ng-repeat="type in leadType" ng-value="type.value">{{type.key}}</option>
+                                <option ng-repeat="type in leadType" ng-value="type.key">{{type.key}}</option>
                             </select>
                             <label class="focus-effect-for-input">Lead Type*</label>
                         </div>
                         <div class="form-group styling-input-list">
-                            <input type="text" class="form-control custom-form-control" name="fullName"
-                                   ng-model="transporter.firstName"/>
+                            <input type="text" class="form-control custom-form-control" name="userName"
+                                   ng-model="transporter.userName"/>
                             <label class="focus-effect-for-input">Full Name*</label>
                         </div>
                         <div class="form-group styling-input-list">
