--- a/client/views/partials/gps/listView.html
+++ b/client/views/partials/gps/listView.html
@@ -64,7 +64,7 @@
                             {{truck.attrs.latestLocation.totalDistance | number:0}}
                         </td>
                         <td data-title="'Driver'" sortable="'driverId'" class="clickable-item col-sm-1">
-                            {{truck.attrs.latestLocation.driverName}}
+                            {{truck.driverName}}
                         </td>
                         <!--<td data-title="'Fuel'" sortable="'totalPayment'" class="clickable-item col-sm-1">
                             NA
