fixed Trip Sheets Updated

--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -32,27 +32,29 @@
 
     <table class="table table-bordered table-striped table-condensed table-hover">
         <tr>
+            <th>S No</th>
             <th>Registration No</th>
             <th>loading Point</th>
             <th>Unloading Point</th>
             <th>Party Name</th>
         </tr>
-        <tr ng-repeat="truck in trucks track by $index" style="text-align: center;">
-            <td class="col-sm-1">{{truck.registrationNo | uppercase}}</td>
+        <tr ng-repeat="sheet in tripSheets" style="text-align: center;">
+            <td class="col-sm-1">{{$index+1}}</td>
+            <td class="col-sm-1">{{sheet.registrationNo | uppercase}}</td>
             <td class="col-sm-2">
                 <div class=" pos-relative">
                         <span class="bot-arrow">
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                         </span>
-                    <select class="form-control" ng-model="tripSheet.loadingPoint[$index]">
+                    <select class="form-control" ng-model="sheet.loadingPoint">
                         <option selected value="">No Trip</option>
                         <option value="inTransit">In Transit</option>
                         <option value="other">Other</option>
                     </select>
                 </div>
-                <div class="mt-5" ng-show="tripSheet.loadingPoint[$index] === 'other'" >
+                <div class="mt-5" ng-show="sheet.loadingPoint === 'other'" >
                     <input type="text" class="form-control" name="others"
-                           ng-model="tripSheet.loadingPointOthers[$index]"
+                           ng-model="sheet.loadingPointOthers"
                            placeholder="Loading Point">
                 </div>
             </td>
@@ -61,21 +63,21 @@
                         <span class="bot-arrow">
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                         </span>
-                <select class="form-control" ng-model="tripSheet.unoadingPoint[$index]" ng-disabled="tripSheet.loadingPoint[$index] != 'other'">
+                <select class="form-control" ng-model="sheet.unloadingPoint" ng-disabled="sheet.loadingPoint != 'other'">
                     <option selected value="">No Trip</option>
                     <option value="inTransit">In Transit</option>
                     <option value="other">Other</option>
                 </select>
                 </div>
-                <div class="mt-5"  ng-show="tripSheet.unoadingPoint[$index] === 'other'" >
+                <div class="mt-5"  ng-show="sheet.unloadingPoint === 'other'">
                     <input type="text" class="form-control" name="others"
-                           ng-model="tripSheet.unloadingPointOthers[$index]"
+                           ng-model="sheet.unloadingPointOthers"
                           placeholder="Unloading Point">
                 </div>
             </td>
             <td class="col-sm-2">
-                <ui-select ng-model="tripSheet.partyId[$index]" theme="select2" title="Choose a Party"
-                           append-to-body="true" style="width: 250px;" ng-disabled = "tripSheet.loadingPoint[$index] != 'other'">
+                <ui-select ng-model="sheet.partyId" theme="select2" title="Choose a Party"
+                           append-to-body="true" style="width: 250px;" ng-disabled = "sheet.loadingPoint != 'other'">
                     <ui-select-match placeholder=" Select a Party" class="form-control" style="height: 42px;text-align: left;">
                         {{$select.selected.name || partyName}}
                     </ui-select-match>
