--- a/client/views/partials/driverSheet/driver-sheet.html
+++ b/client/views/partials/driverSheet/driver-sheet.html
@@ -1,29 +1,24 @@
-<div class="main-right col-xs-12" ng-controller="TripSheetCtrl">
+<div class="main-right col-xs-12" ng-controller="DriverSheetCntrl">
     <div class="row">
-        <div class="col-sm-5">
-            <h3>Driver Sheet</h3>
-        </div>
         <div class="col-sm-4">
-            <ui-select ng-model="truckName" theme="select2"
-                       title="Choose a person" append-to-body="true"
-                       ng-change="searchByTruckName(truckName.registrationNo);">
-                <ui-select-match placeholder=" Select a Truck" class="form-control ui-select-control">
-                    {{$select.selected.registrationNo || registrationNo}}
-                </ui-select-match>
-                <ui-select-choices
-                        repeat="trucks in trucksList  | propsFilter: {registrationNo: $select.search}">
-                    <div ng-bind-html="trucks.registrationNo | highlight: $select.search"></div>
-                </ui-select-choices>
-            </ui-select>
+            <h3>Driver Attendance Sheet</h3>
+        </div>
+        <div class="col-sm-3">
+
         </div>
 
-        <div class="col-sm-3 mb-10 pull-right">
-            <date-picker id="permitExpiry" ng-model="tripSheet.date" placeholder="'Trip Date*'"
+        <div class="col-sm-3 mb-10 pall-zero">
+            <date-picker id="permitExpiry" ng-model="driver.date" placeholder="'Date*'"
                          class="'custom-form-control'" past-present="'pastPresentDate'">
             </date-picker>
         </div>
+        <span class="col-sm-1 pall-zero">
+            <button type="submit" ng-click="getAllDriversAttendance(driver.date);" class="btn go">
+                                <i class="fa fa-search sear" aria-hidden="true"></i>
+                            </button>
+        </span>
     </div>
-    <div class="col-sm-12">
+    <div class="col-sm-12 pall-zero mb-10">
         <div class="pull-right">
             <button class="btn btn-primary" ng-click="saveAll()"> Save</button>
         </div>
@@ -35,19 +30,22 @@
             <th>S No</th>
             <th>Driver Name</th>
             <th>Mobile Number</th>
-            <th>Yes</th>
-            <th>No</th>
+            <th>Attendance</th>
         </tr>
-        <tr ng-repeat="sheet in tripSheets" style="text-align: center;">
+        <tr ng-repeat="driver in driverSheets" style="text-align: center;">
             <td class="col-sm-1">{{$index+1}}</td>
-            <td class="col-sm-1">{{sheet.registrationNo | uppercase}}</td>
-            <td class="col-sm-2"></td>
-            <td class="col-sm-2">
-               <input type="radio" name="status" ng-value="Yes[$index]">
+            <td class="col-sm-1">{{driver.driverName | uppercase}}</td>
+            <td class="col-sm-2">{{driver.contactPhone}}</td>
+            <td class="col-sm-1">
+            <label>  Yes <input type="radio" name="{{$index}}" ng-value="true" ng-model="driver.isPresent">&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <label>No <input type="radio" name="{{$index}}" ng-value="false" ng-model="driver.isPresent"></label>
             </td>
-            <td class="col-sm-2">
-                <input type="radio" name="status" ng-value="No[$index]">
-            </td>
+
         </tr>
     </table>
+    <div class="col-sm-12 pall-zero">
+        <div class="pull-right">
+            <button class="btn btn-primary" ng-click="saveAll()"> Save</button>
+        </div>
+    </div>
 </div>
