--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -4,9 +4,8 @@
             <h3>Trip Sheet</h3>
         </div>
         <div class="col-sm-4">
-            <ui-select ng-model="truckName" theme="select2"
-                       title="Choose a person" append-to-body="true"
-                       ng-change="searchByTruckName(truckName.registrationNo);">
+            <ui-select ng-model="tripSheets.registrationNo" theme="select2"
+                       title="Choose a person" append-to-body="true">
                 <ui-select-match placeholder=" Select a Truck" class="form-control ui-select-control">
                     {{$select.selected.registrationNo || registrationNo}}
                 </ui-select-match>
@@ -43,7 +42,7 @@
             <th>Unloading Point</th>
             <th>Party Name</th>
         </tr>
-        <tr ng-repeat="sheet in tripSheets" style="text-align: center;">
+        <tr ng-repeat="sheet in tripSheets | filter:{registrationNo: tripSheets.registrationNo}" style="text-align: center;">
             <td class="col-sm-1">{{$index+1}}</td>
             <td class="col-sm-1">{{sheet.registrationNo | uppercase}}</td>
             <td class="col-sm-2">
@@ -51,13 +50,16 @@
                         <span class="bot-arrow">
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                         </span>
-                    <select class="form-control" ng-model="sheet.loadingPoint">
-                        <option selected value="">No Trip</option>
-                        <option value="inTransit">In Transit</option>
-                        <option value="other">Other</option>
+                    <!--<select class="form-control" ng-model="sheet.loadingPoint">-->
+                        <!--<option ng-repeat="points in loadingPoints" value="{{points.loadingPoint}}">{{points.loadingPoint}}</option>-->
+                    <!--</select>-->
+
+                    <select  class="form-control"  ng-model="sheet.loadingPoint"
+                            ng-options="p.loadingPoint for p in loadingPoints track by p._id"  >
+                        <option value="">--Select--</option>
                     </select>
                 </div>
-                <div class="mt-5" ng-show="sheet.loadingPoint === 'other'" >
+                <div class="mt-5" ng-show="sheet.loadingPoint.loadingPoint === 'other'" >
                     <input type="text" class="form-control" name="others"
                            ng-model="sheet.loadingPointOthers"
                            placeholder="Loading Point">
@@ -68,13 +70,12 @@
                         <span class="bot-arrow">
                             <i class="fa fa-angle-down" aria-hidden="true"></i>
                         </span>
-                <select class="form-control" ng-model="sheet.unloadingPoint" ng-disabled="sheet.loadingPoint != 'other'">
-                    <option selected value="">No Trip</option>
-                    <option value="inTransit">In Transit</option>
-                    <option value="other">Other</option>
-                </select>
+                    <select  class="form-control"  ng-model="sheet.unloadingPoint"
+                             ng-options="q.unloadingPoint for q in unloadingPoints track by q._id"  ng-disabled="sheet.loadingPoint.loadingPoint != 'other'"">
+                        <option value="">--Select--</option>
+                    </select>
                 </div>
-                <div class="mt-5"  ng-show="sheet.unloadingPoint === 'other'">
+                <div class="mt-5"  ng-show="sheet.unloadingPoint.unloadingPoint === 'other'">
                     <input type="text" class="form-control" name="others"
                            ng-model="sheet.unloadingPointOthers"
                           placeholder="Unloading Point">
@@ -82,7 +83,7 @@
             </td>
             <td class="col-sm-2">
                 <ui-select ng-model="sheet.partyId" theme="select2" title="Choose a Party"
-                           append-to-body="true" style="width: 250px;" ng-disabled = "sheet.loadingPoint != 'other'">
+                           append-to-body="true" style="width: 250px;" ng-disabled = "sheet.loadingPoint.loadingPoint != 'other'">
                     <ui-select-match placeholder=" Select a Party" class="form-control" style="height: 42px;text-align: left;">
                         {{$select.selected.name || partyName}}
                     </ui-select-match>
