--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -105,6 +105,7 @@
                             {{unloadingPoint.unloadingPoint}}
                         </option>
                     </select>
+
                 </div>
             </td>
             <td class="col-sm-2">
@@ -112,7 +113,7 @@
                            append-to-body="true" style="width: 250px;">
                     <ui-select-match placeholder=" Select a Party" class="form-control"
                                      style="height: 42px;text-align: left;">
-                        {{$select.selected.name || partyName}}
+                        {{$select.selected.name || sheet.partyName}}
                     </ui-select-match>
                     <ui-select-choices repeat="party in parties | propsFilter: {name: $select.search}">
                         <div ng-bind-html="party.name | highlight: $select.search">
