--- a/client/views/partials/admin/services/addNewAccount.html
+++ b/client/views/partials/admin/services/addNewAccount.html
@@ -140,6 +140,24 @@
                                         </label>
                                     </div>
                                 </li>
+                                <li>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" value="" ng-model="accountDetails.tripSheetEnabled">
+                                            <span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                            Trip Sheet
+                                        </label>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" value="" ng-model="accountDetails.driverSheetEnabled">
+                                            <span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                            Driver Sheet
+                                        </label>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
                         <div class="form-group">
